--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,30 @@ version: "3"
 
 services:
   postgresdb:
-    build:
-      context:  ./docker/postgres
-      dockerfile: Dockerfile
+    image: postgres:11.0-alpine
 
-    environment:
-      - POSTGRES_PASSWORD=shatia
     volumes:
-      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./data:/stocks_products/data
     ports:
       - "5432:5432"
+    environment:
+      - POSTGRES_DB=prod_db
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=shatia
 
   web:
-    build:
-      context:  ./
-      dockerfile: Dockerfile
+    build: .
     volumes:
-      - ./:/pythonProject2
-    depends_on:
-      - postgresdb
+       - ./stocks_products:/stocks_products
+    ports:
+      - "8001:8000"
+
+  nginx:
+    image: nginx
     ports:
       - "8000:8000"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - postgresdb
+      - web
